--- a/style.sass
+++ b/style.sass
@@ -4,7 +4,7 @@
 html
     scroll-behavior: smooth
 body
-    background-image: linear-gradient(to top, #093f7f11, #fff)
+    // background-image: linear-gradient(to top, #093f7f11, #fff)
     background-attachment: fixed
 .container
     max-width: 1200px
@@ -334,6 +334,8 @@ header
                     transform: none
                 p
                     display: none
+            a
+                transform: none
         // .poster
         //     margin-bottom: 50px
         //     margin: 0
